# chexploration_with_crl

./: .env  .gitignore  README.md  pyproject.toml
datafiles/: setup_data.py
notebooks/: chexpert.sample.ipynb  metrics.ipynb  race_invariance.ipynb  results_disease_detection.py  results_multitask.py
prediction/: backbones.py  chexpert_multitask.py  datasets.py  mcc.py  metrics.py  race_invariance.py  race_invariance_pred_last.py  view_invariance.py
prediction/datasets/: cxr.py  embed.py
scripts/: all_exps.sh  race_invariance.sh  race_invariance_more.sh  race_invariance_test.sh  slurm_invariant.sh  slurm_train.sh  test.sh  test_job_race_invariance.sh  train_job.sh  train_job_race_invariance.sh  train_job_view_invariance.sh  view_invariance.sh  view_invariance_more.sh
