[tool.poetry]
name = "crl_chexploration"
version = "0.1.0"
description = ""
authors = ["Avinash Kori", "Rajat Rasal"]  # equal contributions
readme = "README.md"
packages = [
    { include = "prediction" },
    { include = "datafiles" },
    { include = "notebooks" }
]

[tool.poetry.scripts]
setup_data = "datafiles.setup_data:main"
chexpert_train = "prediction.race_invariance:cli"
chexpert_disease_detection = "notebooks.results_disease_detection:main"

[tool.poetry.dependencies]
python = "3.12.0"
torch = "2.4.1"
torchvision = "0.19.1"
lightning = "2.4.0"
numpy = "1.26.3"
matplotlib = "3.8.2"
pandas = "2.2.3"
tqdm = "4.66.3"
scikit-learn = "1.6.1"
scikit-image = "0.25.1"
tensorboard = "2.17.0"
jupyter = "1.1.1"
seaborn = "0.13.2"
openpyxl = "3.1.5"
python-dotenv = "1.0.1"
tabulate = "0.9.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
nvidia-nccl-cu12 = "2.20.5"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nvtx-cu12 = "12.1.105"
nvidia-nvjitlink-cu12 = "12.3.52"

[build-system]
requires = ["poetry-core==2.0.*"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"